
*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #1583863: An unicode subclass can now override the __unicode__ method

- Issue #7544: Preallocate thread memory before creating the thread to avoid
  a fatal error in low memory condition.

- Issue #7820: The parser tokenizer restores all bytes in the right if
  the BOM check fails.

Library
-------

- Issue #3890: Fix recv() and recv_into() on non-blocking SSL sockets.

- Issue #6544: fix a reference leak in the kqueue implementation's error
  handling.

- Issue #7774: Set sys.executable to an empty string if argv[0] has been
  set to an non existent program name and Python is unable to retrieve the real
  program name

- Issue #1054943: Fix unicodedata.normalize('NFC', text) for the Public Review
  Issue #29

- Issue #7494: fix a crash in _lsprof (cProfile) after clearing the profiler,
  reset also the pointer to the current pointer context.

- Issue #4961: Inconsistent/wrong result of askyesno function in tkMessageBox
  with Tcl/Tk-8.5.

- Issue #7356: ctypes.util: Make parsing of ldconfig output independent of
  the locale.

Build
-----

- Issue #6716: Quote -x arguments of compileall in MSI installer.

- Issue #1628484: The Makefile doesn't ignore the CFLAGS environment
  variable anymore.  It also forwards the LDFLAGS settings to the linker
  when building a shared library.


What's New in Python 2.6.5?
===========================

*Release date: 2010-03-18*


What's New in Python 2.6.5 rc 2?
================================

*Release date: 2010-03-09*

Core and Builtins
-----------------

- Issue #8089: a OS X framework build with --with-universal-archs=3-way|intel
  had no way to select a 32-bit executable.

- Issue #8084: fixes build issues on OSX 10.6 when targetting OSX 10.4.

Library
-------

- Reverting the changes made in r78432. Discussed in the tracker issue #7540.

- Issue #8107: Fixed test_distutils so it doesn't crash when the source 
  directory cannot be found.
